home page blocked out

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,14 +2,27 @@
 <h1>Address Book</h1>
 <div class="container">
   <div class="row">
-    <button id='newAddy' type="button" name="button">New Address</button>
     <br>
+    <button type="button" class="btn btn-primary btn-lg active">New Address</button>
     <br>
     <hr>
   </div>
-
   <div class="row">
-
-  </div>
-
+    <div class="col-md-6">
+      <h3>Name</h3>
+      <p>Address 1</p>
+      <p>Address 2</p>
+      <a href="#">DELETE</a>
+      <hr>
+    </div>
+  </div><!-- row end  -->
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Name</h3>
+      <p>Address 1</p>
+      <p>Address 2</p>
+      <a href="#">DELETE</a>
+      <hr>
+    </div>
+  </div><!-- row end  -->
 </div>
