Created new contact form --updated button on home to get to new contact --added post route for new contact submit --added new route for new contact

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <br>
-    <button type="button" class="btn btn-primary btn-lg active">New Address</button>
+    <a class="btn btn-primary btn-lg active" href="contacts/new">New Address</a>
     <br>
     <hr>
   </div>
